--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "freeform"
-version = "0.3.0"
-repository = "https://github.com/Testare/n_dit_secret"
+version = "0.3.1"
+repository = "https://github.com/Testare/freeform"
 authors = ["Testare <testare.i9z@gmail.com>"]
 edition = "2021"
 description = "A small library for being able to store free-form data"
@@ -10,7 +10,7 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy_reflect = "0.13.2"
+bevy_reflect = "0.14"
 serde = {version = "1.0.197", features = ["derive"]}
 thiserror = "1.0.58"
 typed_key = "0.1.1"
